@@ -93,6 +93,12 @@ $lang_module['smtp_username'] = 'Mail Account';
 $lang_module['smtp_login'] = 'User Name';
 $lang_module['smtp_pass'] = 'Password';
 $lang_module['smtp_error_openssl'] = 'Error: Your server does not support sending mail via ssl';
+$lang_module['smtp_test'] = 'Check the configuration';
+$lang_module['smtp_test_subject'] = 'Test email';
+$lang_module['smtp_test_message'] = 'This is a test email to check the mail configuration. Simply delete it!';
+$lang_module['smtp_test_success'] = 'Send email successfully';
+$lang_module['smtp_test_fail'] = 'Email failed';
+$lang_module['smtp_test_note'] = 'Note: Click Save configuration if there is a change in the above form before checking the configuration';
 $lang_module['bot_name'] = 'Server\'s name';
 $lang_module['bot_agent'] = 'UserAgent';
 $lang_module['bot_ips'] = 'Server\'s IP';
