@@ -93,6 +93,12 @@ $lang_module['smtp_username'] = 'Infos du compte';
 $lang_module['smtp_login'] = 'Nom d\'utilisateur';
 $lang_module['smtp_pass'] = 'Mot de passe';
 $lang_module['smtp_error_openssl'] = 'Erreur: Voitre serveur ne supporte pas d\'envoyer les e mails par ssl';
+$lang_module['smtp_test'] = 'Vérifiez la configuration';
+$lang_module['smtp_test_subject'] = 'Test email';
+$lang_module['smtp_test_message'] = 'Ceci est un courrier électronique de test pour vérifier la configuration du courrier. Supprimez-le simplement!';
+$lang_module['smtp_test_success'] = 'Envoyer un email avec succès';
+$lang_module['smtp_test_fail'] = 'Email échoué';
+$lang_module['smtp_test_note'] = 'Remarque: Cliquez sur Enregistrer la configuration s\'il y a une modification dans le formulaire ci-dessus avant de vérifier la configuration.';
 $lang_module['bot_name'] = 'Moteurs de recherche';
 $lang_module['bot_agent'] = 'Agent du serveur';
 $lang_module['bot_ips'] = 'IP du serveur';
