@@ -97,6 +97,12 @@ $lang_module['smtp_username'] = 'Tài khoản gửi mail';
 $lang_module['smtp_login'] = 'Tên Tài khoản';
 $lang_module['smtp_pass'] = 'Mật khẩu';
 $lang_module['smtp_error_openssl'] = 'Lỗi: Máy chủ của bạn không hỗ trợ gửi mail qua ssl';
+$lang_module['smtp_test'] = 'Kiểm tra cấu hình';
+$lang_module['smtp_test_subject'] = 'Email thử nghiệm';
+$lang_module['smtp_test_message'] = 'Đây là email thử nghiệm để kiểm tra cấu hình gửi mail. Đơn giản bạn hãy xóa nó đi!';
+$lang_module['smtp_test_success'] = 'Gửi email thành công';
+$lang_module['smtp_test_fail'] = 'Gửi email thất bại';
+$lang_module['smtp_test_note'] = 'Lưu ý: Nhấp lưu cấu hình nếu có thay đổi ở form trên trước khi kiểm tra cấu hình';
 $lang_module['bot_name'] = 'Tên máy chủ ';
 $lang_module['bot_agent'] = 'UserAgent của máy chủ';
 $lang_module['bot_ips'] = 'IP của máy chủ';
